--- a/bin/supermarketmanagement/ressource/css/style.css
+++ b/bin/supermarketmanagement/ressource/css/style.css
@@ -1,19 +1,17 @@
-.sidebar{
-    -fx-background-color: #05071E;
+.sidebar {
+  -fx-background-color: #05071e;
 }
-.sidebar-center{
-    -fx-background-color: #02020A;
+.sidebar-center {
+  -fx-background-color: #02020a;
 }
 /*.sidebar-center:hover{
     -fx-background-color: #101660;
 }*/
-.rightbar{
-    -fx-background-color: #02020A;
+
+.button-side:hover {
+  -fx-background-color: #101660;
 }
-.button-side:hover{
-	-fx-background-color:#101660;
-}
-.button-side{
-	-fx-background-color:#05071E;
-	-fx-background-raduis:40px
+.button-side {
+  -fx-background-color: #05071e;
+  -fx-background-raduis: 40px;
 }
