--- a/src/supermarketmanagement/ressource/fxml/outputStock.fxml
+++ b/src/supermarketmanagement/ressource/fxml/outputStock.fxml
@@ -2,51 +2,95 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
-<?import com.jfoenix.controls.JFXTreeTableView?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TreeTableColumn?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="617.0" style="-fx-background-color: #CCCCCC;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="617.0" style="-fx-background-color: #CCCCCC;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="supermarketmanagement.java.control.OutputStockController">
    <children>
-      <Label alignment="CENTER" layoutX="14.0" layoutY="74.0" prefHeight="33.0" prefWidth="126.0" text="Code to out" textAlignment="JUSTIFY" />
-      <Label alignment="CENTER" layoutX="348.0" layoutY="74.0" prefHeight="33.0" prefWidth="67.0" text="Qauntity" textAlignment="JUSTIFY" />
-      <Label alignment="CENTER" layoutX="348.0" layoutY="119.0" prefHeight="33.0" prefWidth="40.0" text="Date" textAlignment="JUSTIFY" />
-      <JFXTextField layoutX="149.0" layoutY="77.0" prefHeight="20.0" prefWidth="155.0" />
-      <Label alignment="CENTER" layoutX="33.0" layoutY="119.0" prefHeight="33.0" prefWidth="50.0" text="Price" textAlignment="JUSTIFY" />
-      <JFXTextField layoutX="149.0" layoutY="123.0" prefHeight="0.0" prefWidth="155.0" />
-      <JFXTextField layoutX="441.0" layoutY="77.0" />
-      <DatePicker layoutX="441.0" layoutY="123.0" prefHeight="26.0" prefWidth="173.0" />
-      <JFXTreeTableView layoutY="154.0" prefHeight="197.0" prefWidth="616.0">
-         <columns>
-            <TreeTableColumn prefWidth="105.0" text="IdEnter" />
-            <TreeTableColumn prefWidth="125.0" text="Code" />
-            <TreeTableColumn prefWidth="127.0" text="Quantity" />
-            <TreeTableColumn prefWidth="149.0" text="Price" />
-            <TreeTableColumn prefWidth="107.0" text="Date" />
-         </columns>
-      </JFXTreeTableView>
-      <JFXButton buttonType="RAISED" layoutX="14.0" layoutY="360.0" prefHeight="26.0" prefWidth="101.0" style="-fx-background-color: #000000;" text="Save" textFill="WHITE" />
-      <JFXButton buttonType="RAISED" layoutX="133.0" layoutY="360.0" prefHeight="26.0" prefWidth="101.0" style="-fx-background-color: #000000;" text="Next" textFill="WHITE" />
-      <JFXButton buttonType="RAISED" layoutX="254.0" layoutY="360.0" prefHeight="26.0" prefWidth="101.0" style="-fx-background-color: #000000;" text="Preview" textFill="WHITE" />
-      <JFXButton buttonType="RAISED" layoutX="519.0" layoutY="360.0" prefHeight="26.0" prefWidth="93.0" style="-fx-background-color: #000000;" text="Excel" textFill="WHITE" />
-      <JFXButton buttonType="RAISED" layoutX="391.0" layoutY="360.0" prefHeight="26.0" prefWidth="101.0" style="-fx-background-color: #000000;" text="Word" textFill="WHITE" />
+      <Label alignment="CENTER" layoutX="14.0" layoutY="74.0" prefHeight="33.0" prefWidth="126.0" text="Code to out" textAlignment="JUSTIFY">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font></Label>
+      <Label alignment="CENTER" layoutX="348.0" layoutY="74.0" prefHeight="33.0" prefWidth="67.0" text="Qauntity" textAlignment="JUSTIFY">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font></Label>
+      <Label alignment="CENTER" layoutX="348.0" layoutY="119.0" prefHeight="33.0" prefWidth="40.0" text="Date" textAlignment="JUSTIFY">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font></Label>
+      <Label alignment="CENTER" layoutX="33.0" layoutY="119.0" prefHeight="33.0" prefWidth="50.0" text="Price" textAlignment="JUSTIFY">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font></Label>
+      <JFXTextField fx:id="price" layoutX="149.0" layoutY="123.0" prefHeight="0.0" prefWidth="155.0" />
+      <JFXTextField fx:id="quantity" layoutX="441.0" layoutY="77.0" />
+      <DatePicker fx:id="dateOut" layoutX="441.0" layoutY="123.0" prefHeight="26.0" prefWidth="173.0" />
       <Pane layoutX="10.0" layoutY="10.0" prefHeight="65.0" prefWidth="643.0" style="-fx-background-color: #097eba; -fx-background-radius: 5;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label layoutX="25.0" layoutY="17.0" prefHeight="21.0" prefWidth="600.0" text="Cette fenetre Permet de voir les Entrées des differentes " textFill="WHITE">
+            <Label layoutX="25.0" layoutY="17.0" prefHeight="21.0" prefWidth="600.0" text="Cette fenetre Permet de sortie les produits présent dans  " textFill="WHITE">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Label layoutX="240.0" layoutY="43.0" prefHeight="21.0" prefWidth="139.0" text="transactions" textFill="WHITE">
+            <Label layoutX="240.0" layoutY="43.0" prefHeight="21.0" prefWidth="191.0" text="la base de données" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="17.0" />
                </font>
             </Label>
          </children>
       </Pane>
+      <TableView fx:id="table" layoutY="179.0" prefHeight="181.0" prefWidth="643.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="179.0">
+         <columns>
+            <TableColumn fx:id="col_id" prefWidth="75.0" text="id" />
+            <TableColumn fx:id="col_quantity" prefWidth="116.0" text="Quantity" />
+            <TableColumn fx:id="col_price" prefWidth="149.0" text="Price" />
+            <TableColumn fx:id="col_date" prefWidth="142.0" text="Date" />
+            <TableColumn fx:id="col_codeProduct" prefWidth="134.0" text="Code Product" />
+         </columns>
+      </TableView>
+      <JFXButton buttonType="RAISED" layoutX="258.0" layoutY="360.0" onAction="#saveEnterStock" prefHeight="33.0" prefWidth="101.0" style="-fx-background-color: #097eba; -fx-background-radius: 20;" text="Save" textFill="WHITE" />
+      <JFXButton buttonType="RAISED" layoutX="156.0" layoutY="363.0" onAction="#refreshProduct" prefHeight="27.0" prefWidth="86.0" style="-fx-background-color: #41803C;" text="Refresh" textFill="WHITE">
+         <graphic>
+            <ImageView fitHeight="17.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/icons8_refresh_30px.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </JFXButton>
+      <Button fx:id="word" layoutX="535.0" layoutY="364.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="44.0" styleClass="button-side" textFill="#868491">
+         <graphic>
+            <ImageView fitHeight="26.0" fitWidth="26.0" layoutX="25.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/photo_2020-09-14_23-15-15.jpg" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
+      <Button fx:id="excel" layoutX="469.0" layoutY="364.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="44.0" styleClass="button-side" textFill="#868491">
+         <graphic>
+            <ImageView fitHeight="22.0" fitWidth="20.0" layoutX="25.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/photo_2020-09-14_23-11-58.jpg" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
+      <Label alignment="CENTER" layoutX="368.0" layoutY="360.0" prefHeight="33.0" prefWidth="101.0" text="Export To" textAlignment="JUSTIFY">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </Label>
+      <ComboBox fx:id="code" layoutX="147.0" layoutY="90.0" prefHeight="26.0" prefWidth="155.0" />
    </children>
 </AnchorPane>
